--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href ="style.css"/>
 </head>
 <body>
-    <div id ="form_cont">
+    <div id ="form_cont" class = "form_cont_comm">
         <h1 style="text-align:center;">Log-in</h1>
             <div style="height:0.5vh">
                 <p> </p>
